test/MC/SVE/regression-tests/negative_tests/sve-st1b-006.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU32CStore1LSSZ
// Offset register Rm cannot be xzr
st1b z15.s, p1, [x11, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
